--- a/playbook.yaml
+++ b/playbook.yaml
@@ -7,13 +7,15 @@
             update_cache: yes
 -  name: 'install zsh and use as default shell'
    hosts: localhost
+   vars_files: 
+       - ./personal.yaml
    become: true
    become_method: sudo
    tasks:
        -  apt:
             pkg:
               zsh
-       -  command: chsh -s "$(which zsh)"
+       -  command: chsh {{ USER }} -s /usr/bin/zsh
 -  name: 'install build-essential'
    hosts: localhost
    become: true
@@ -24,6 +26,8 @@
             - build-essential
 -  name: 'install docker essentials'
    hosts: localhost
+   vars_files:
+       - ./personal.yaml
    become: true
    become_method: sudo
    tasks:
@@ -33,3 +37,12 @@
             - curl
             - gnupg
             - lsb-release
+       -  shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+       -  shell: echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+       -  apt:
+            pkg:
+            - docker-ce
+            - docker-ce-cli
+            - containerd.io
+       -  user: name={{ USER }}
+                group=docker
