add minikube install command

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -55,3 +55,11 @@
        - shell: curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
        - command: chmod +x ./kubectl
        - command: mv ./kubectl /usr/local/bin/kubectl
+
+-  name: 'install minikube'
+   hosts: localhost
+   become: true
+   become_method: sudo
+   tasks:
+       - shell: curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+       - command: install minikube-linux-amd64 /usr/local/bin/minikube
