--- a/playbook.yaml
+++ b/playbook.yaml
@@ -5,6 +5,14 @@
    tasks:
        -  apt:
             update_cache: yes
+-  name: 'install chezmoi'
+   hosts: localhost
+   become: true
+   become_method: sudo
+   tasks:
+       - shell: sh -c "$(curl -fsLS chezmoi.io/get)" -- init --apply {{ GITHUB_USERNAME }}
+   vars_files: 
+       - ./personal.yaml
 -  name: 'install zsh and use as default shell'
    hosts: localhost
    vars_files: 
@@ -16,6 +24,7 @@
             pkg:
               zsh
        -  command: chsh {{ USER }} -s /usr/bin/zsh
+
 -  name: 'install build-essential'
    hosts: localhost
    become: true
