--- a/for_windows.yaml
+++ b/for_windows.yaml
@@ -16,14 +16,12 @@
         pkg:
           zsh
     - command: chsh {{ USER }} -s /usr/bin/zsh
-- name: install development essentials
+- name: 'install asdf'
   hosts: localhost
-  become: true
-  become_method: sudo
   tasks:
-    - apt:
-        pkg:
-          neovim
+    - ansible.builtin.git:
+        repo: https://github.com/asdf-vm/asdf.git
+        dest: ~/.asdf
 - name: install chezmoi
   hosts: localhost
   vars_files:
