modify vim tmux conf

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -2,3 +2,5 @@ set -g prefix C-j
 set-option -g mouse on
 bind h split-window -h
 bind v split-window -v
+set -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm:colors=256'
