add vim extension

--- a/dot_config/nvim/plugins/config/dein.toml
+++ b/dot_config/nvim/plugins/config/dein.toml
@@ -10,3 +10,9 @@ repo = "shougo/deol.nvim"
 hook_add = """
 source ~/.config/nvim/plugins/deol.rc.vim
 """
+
+[[plugins]]
+repo = "jiangmiao/auto-pairs"
+
+[[plugins]]
+repo = "Yggdroot/indentLine"
