add nvim coc exntension

--- a/dot_config/nvim/plugins/config/dein.toml
+++ b/dot_config/nvim/plugins/config/dein.toml
@@ -19,3 +19,6 @@ repo = "Yggdroot/indentLine"
 
 [[plugins]]
 repo = "neoclide/coc.nvim"
+hook_add = """
+source ~/.config/nvim/plugins/coc.rc.vim
+"""
