modify nvim indent config

--- a/dot_config/nvim/plugins/config/dein.toml
+++ b/dot_config/nvim/plugins/config/dein.toml
@@ -16,6 +16,9 @@ repo = "jiangmiao/auto-pairs"
 
 [[plugins]]
 repo = "Yggdroot/indentLine"
+hook_add = """
+source ~/.config/nvim/plugins/indentLine.rc.vim
+"""
 
 [[plugins]]
 repo = "neoclide/coc.nvim"
