modify tmux pane config

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,6 +1,6 @@
 set -g prefix C-j
 set-option -g mouse on
-bind h split-window -h
-bind v split-window -v
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
+bind v split-window -c '#{pane_current_path}'
+bind h split-window -h -c '#{pane_current_path}'
